removed the Double constructor errors